# CUFLynx

./: .gitignore  CLAUDE.md  README.md  cellml_explorer.html  claude.md  install.sh  run.sh
.github/workflows/: ci.yml  release.yml
apps/: README.md
apps/api/: calibrated_model.py  calibration.py  calibration_runner.py  cellml_flatten.py  cellml_meta.py  compiler_check.py  engine.py  export_pipeline.py  local_sensitivity.py  main.py  model_codegen.py  obs_data.py  obs_options.py  obs_series.py  params_for_id.py  pyproject.toml  runtime_paths.py  sensitivity.py  sensitivity_runner.py  settings_store.py  solver_options.py  uq.py  uq_runner.py  user_funcs.py  user_operations.py
apps/api/tests/: conftest.py  test_3compartment.py  test_ad_gating.py  test_calibrated_model.py  test_calibration.py  test_cellml_flatten.py  test_config.py  test_dependency_pins.py  test_examples.py  test_export_pipeline.py  test_fs_list.py  test_health.py  test_local_sensitivity.py  test_obs_data_upload.py  test_obs_options.py  test_obs_series.py  test_params_for_id.py  test_protocol_run.py  test_python_model.py  test_run_staleness.py  test_runner_seed.py  test_runtime_paths.py  test_sensitivity_run.py  test_settings_store.py  test_simulate.py  test_sn_protocol.py  test_solver_options.py  test_upload.py  test_uq.py  test_user_funcs.py  test_user_operations.py  test_variables.py  test_windows.py
apps/desktop/: app.py
apps/web/: index.html  package-lock.json  package.json  vite.config.js
apps/web/src/: App.test.js  App.vue  main.js  style.css
apps/web/src/components/: AnalysisPanel.test.js  AnalysisPanel.vue  CalibrationPanel.test.js  CalibrationPanel.vue  ControlPanel.test.js  ControlPanel.vue  EditObsDataDialog.test.js  EditObsDataDialog.vue  EditOperationFuncsDialog.test.js  EditOperationFuncsDialog.vue  EditParamsDialog.test.js  EditParamsDialog.vue  FileBrowserDialog.test.js  FileBrowserDialog.vue  FileImport.test.js  FileImport.vue  ParamInputPlot.test.js  ParamInputPlot.vue  PlotPanel.test.js  PlotPanel.vue  ProgressPanel.test.js  ProgressPanel.vue  ProtocolInfoEditor.test.js  ProtocolInfoEditor.vue  SciNumberInput.test.js  SciNumberInput.vue  SensitivityPanel.test.js  SensitivityPanel.vue  StartDialog.test.js  StartDialog.vue  StatusBar.vue  UQPanel.test.js  UQPanel.vue  VariableList.vue
apps/web/src/lib/: api.js  api.test.js  examples.js  format.js  format.test.js  math.js  obsDataJson.js  obsDataJson.test.js  paramsCsv.js  paramsCsv.test.js  plot.js  plot.test.js  protocolInfo.js  protocolInfo.test.js  solverConfig.js  solverConfig.test.js
apps/web/src/stores/: useCalibration.js  useCalibration.test.js  useModel.js  useObsData.js  useObsData.test.js  useParamsForId.js  useParamsForId.test.js  useSensitivity.js  useSimResult.js  useSliders.js  useSliders.test.js  useUQ.js
docs/: github-issue-drafts.md
docs/issues/: issue-1-body.md  issue-2-body.md  issue-3-body.md  issue-4-body.md  issue-5-body.md
packaging/: README.md  cuflynx.spec  rthook_myokit.py  version_info.txt
resources/: 3compartment_flat.cellml  3compartment_obs_data.json  BG_MWC_Huang-Peskin_SS.cellml  Dash2016_fig3(3A_Joels_an_Pugh).csv  Lotka_Volterra_obs_data.json  Lotka_Volterra_params_for_id.csv  SN_simple_flat.cellml  winslow_rw2.csv
resources/3compartment_unflattened/: 3compartment.cellml  3compartment_modules.cellml  3compartment_parameters.cellml  3compartment_units.cellml
scripts/: analysis_smoke.py  install.py  package.py  run.py
