[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cuflynx-api"
version = "0.1.0"
description = "FastAPI backend for the CellML slider-visualisation app"
readme = "../../README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "numpy>=1.24.0",
    "pandas>=1.3.0",
    "python-multipart>=0.0.9",
    # CellML simulation (circulatory_autogen Myokit path; sibling repo on PYTHONPATH).
    # Required only for the integration tier; unit tests run without them.
    "myokit>=1.39.1",
    # Upper bound is load-bearing — keep it in step with circulatory_autogen's own
    # pin. libcellml 0.7 changed the generated Python code (no VARIABLE_COUNT), and
    # CA's PythonGenerator still expects it, so the python / casadi_python backends
    # die with KeyError: 'VARIABLE_COUNT'. Without the bound a fresh `pip install`
    # silently resolves 0.7.0 — which is exactly how the v0.1.0 desktop build
    # shipped broken while a dev machine holding 0.6.3 looked fine.
    "libcellml>=0.6.3,<0.7.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]
# Desktop shell + single-file packaging (scripts/package.py). Not needed to run
# the app from source, only to build/ship the double-clickable executable.
desktop = [
    "pywebview>=5.0",
    "pyinstaller>=6.0",
]

[tool.hatch.build.targets.wheel]
only-include = [
    "main.py",
    "engine.py",
    "cellml_meta.py",
    "obs_data.py",
    "params_for_id.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: requires myokit and circulatory_autogen (real CellML simulation)",
]
